# kgs-oil-pipeline

./: .gitignore  .mypy.ini  .ruff.toml  00-START-HERE.md  API_REFERENCE.md  ARCHITECTURE.md  DELIVERABLES.md  FILES.md  FINAL_FIXES.md  FIXES.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  Makefile  PARALLEL_PROCESSING.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  STATUS.md  TYPE_CHECKING_SOLUTION.md  TaskIndex.md  VERIFICATION.md  VERIFICATION_CHECKLIST.md  config.yaml  eval_results.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  task-writer-kgs.md  test-requirements.xml  test_imports.py  verify_pipeline.py
kgs/tasks/: TaskIndex.md  acquire_tasks.md  features_tasks.md  ingest_tasks.md  task_acquisition.md  task_cleaning.md  task_ingestion.md  task_pipeline.md  task_processing.md  task_tests.md  transform_tasks.md
kgs_pipeline/: __init__.py  acquire.py  config.py  features.py  ingest.py  logging_utils.py  pipeline.py  transform.py  utils.py
references/: kgs_archives_data_dictionary.csv  kgs_monthly_data_dictionary.csv
tasks/: acquire_tasks.md  config_tasks.md  features_tasks.md  ingest_tasks.md  pipeline_tasks.md  transform_tasks.md
tests/: __init__.py  conftest.py  test_acquire.py  test_config.py  test_features.py  test_ingest.py  test_pipeline.py  test_transform.py
