[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kgs_pipeline"
version = "0.1.0"
description = "KGS oil production data pipeline"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "dask[distributed]>=2024.1",
    "pyarrow>=14.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "bokeh>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "pandas-stubs>=2.0",
    "types-requests>=2.31",
    "types-PyYAML>=6.0",
    "types-beautifulsoup4>=4.12",
]

[project.scripts]
kgs-pipeline = "kgs_pipeline.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kgs_pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
