[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kgs-pipeline"
version = "0.1.0"
description = "KGS Oil Production Data Pipeline"
requires-python = ">=3.11"
dependencies = [
    "dask[distributed]",
    "pandas",
    "pyarrow",
    "requests",
    "beautifulsoup4",
    "pyyaml",
    "bokeh",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "types-requests",
    "pandas-stubs",
]

[project.scripts]
kgs-pipeline = "kgs_pipeline.pipeline:_cli_entry"

[tool.mypy]
python_version = "3.11"
files = ["kgs_pipeline/"]
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["kgs_pipeline*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
